# Dictum

./: .gitignore  Cargo.toml  README.md  plan.md  restart-dev.cmd  start-dev.cmd  stop-dev.cmd  telemetry-id
.cargo/: config.toml
.github/workflows/: ci.yml  release-windows.yml
benchmarks/: README.md
benchmarks/baselines/: smoke-baseline.json  smoke-baseline.md
benchmarks/fixtures/: FIXTURE_MANIFEST.md
benchmarks/fixtures/long_form/: long_paragraph.txt
benchmarks/fixtures/noisy_room/: noisy_intro.txt
benchmarks/fixtures/quiet_speech/: quiet_intro.txt
benchmarks/fixtures/whisper_speech/: whisper_intro.txt
dictum-app/: Cargo.toml  tauri.conf.json
dictum-app/capabilities/: default.json
dictum-app/icons/: icon.icns
dictum-app/src/: commands.rs  main.rs  model_profiles.rs  settings.rs  state.rs  storage.rs  text_injector.rs  transform.rs
dictum-core/: Cargo.toml
dictum-core/src/: error.rs  lib.rs
dictum-core/src/audio/: device.rs  mod.rs  resample.rs
dictum-core/src/buffering/: chunk.rs  mod.rs
dictum-core/src/engine/: mod.rs  pipeline.rs
dictum-core/src/inference/: mod.rs  onnx.rs  stub.rs
dictum-core/src/ipc/: events.rs  mod.rs
dictum-core/src/vad/: energy.rs  mod.rs  silero.rs
dictum-core/tests/: pipeline_latency.rs
dictum-ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dictum-ui/scripts/: smoke-ui.mjs  typecheck.mjs
dictum-ui/src/app/: globals.css  layout.tsx  page.tsx
dictum-ui/src/app/pill/: page.tsx
dictum-ui/src/components/: RecordButton.tsx  StatusBar.tsx  TranscriptFeed.tsx
dictum-ui/src/components/settings/: AppUpdatesSection.tsx  GuidedTuneCard.tsx  LiveCorrectionsSection.tsx  OnboardingModal.tsx  PerAppProfilesSection.tsx  PrivacySection.tsx
dictum-ui/src/data/: smokeBaseline.ts
dictum-ui/src/hooks/: useActivity.ts  useAppProfiles.ts  useAudioDevices.ts  useCorrectionsManager.ts  useEngine.ts  useGuidedTune.ts  usePanelData.ts  useTranscript.ts  useUpdateManager.ts
dictum-ui/src/lib/: tauri.ts
docs/: DICTUM_0.1.7_IMPLEMENTATION_PLAN.md  DICTUM_0.1.8_DEV2_DEV4_PLAN.md  DICTUM_0.1.8_MAIN_RELEASE_PREP.md  DICTUM_AUDIT_2026-03.md  DICTUM_RELEASE_ROADMAP_0.1.7_0.1.8.md  GITHUB_RELEASE.md
scripts/: dev-server.ps1  download_model.py
shared/: ipc_types.ts
