[workspace]
members = [
    "dictum-core",
    "dictum-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lattice Labs"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"

# Ring buffer (lock-free SPSC)
ringbuf = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Resampling (always needed — captures at device rate, model needs 16 kHz)
rubato = "0.15"

# ONNX inference backend
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "directml"] }

# N-dimensional arrays (for ONNX tensor I/O)
ndarray = "0.17"

# Fast FFT (mel spectrogram computation)
rustfft = "6"

# HuggingFace tokenizer (Whisper text decoding)
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Tauri (workspace-level so both crates can reference the same version)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Persistence + crypto + networking
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

[profile.dev]
opt-level = 2
